tests/en-cpp-reference-c/failing/x86_msvc/cCode424.c
/* Cake 0.13.29 x86_msvc */

int __cdecl puts(char * _Buffer);

int main()
{
    puts("void*");
    puts("other");
    puts("nullptr_t");
}
